--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDS Interface</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -107,6 +107,6 @@
     <footer>
         <p>© 2025 MDS - All Rights Reserved</p>
     </footer>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
