--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="mood-status">
             <div class="result-card">
                 <h4 class="result-title">Mood</h4>
-                <img id="mood-emoji" class="result-img" src="/Mood/neutral.png" alt="Mood">
+                <img id="mood-emoji" class="result-img" src="./Mood/neutral.png" alt="Mood">
                 <h1 id="mood-value" class="result-Value">Stable</h1>
                 </div>
             </div>
@@ -25,7 +25,7 @@
             <div class="parameter-card">
                 <h4 class="parameter-title">Temperature</h4>
                 <h6 id="Temperature-level" class="parameter-level">Normal</h6>
-                <img class="parameter-img" src="/Indicators/temperature.png" alt="Temperature">
+                <img class="parameter-img" src="./Indicators/temperature.png" alt="Temperature">
                 <h1 id="Temperature-value" class="parameter-Value">32<span> C°</span></h1>
                 <div class="range-container">
                     <div class="range-limit">
@@ -41,7 +41,7 @@
             <div class="parameter-card">
                 <h4 class="parameter-title">Heart Rate</h4>
                 <h6 id="hr-level" class="parameter-level">Normal</h6>
-                <img class="parameter-img" src="/Indicators/blood-pressure.png" alt="HR">
+                <img class="parameter-img" src="./Indicators/blood-pressure.png" alt="HR">
                 <h1 id="hr-value" class="parameter-Value">80<span> BPM</span></h1>
                 <div class="range-container">
                     <div class="range-limit">
@@ -57,7 +57,7 @@
             <div class="parameter-card">
                 <h4 class="parameter-title">HR Variability</h4>
                 <h6 id="hrv-level" class="parameter-level">Normal</h6>
-                <img class="parameter-img" src="/Indicators/heartbeat.png" alt="HRV">
+                <img class="parameter-img" src="./Indicators/heartbeat.png" alt="HRV">
                 <h1 id="hrv-value" class="parameter-Value">45<span> ms</span></h1>
                 <div class="range-container">
                     <div class="range-limit">
@@ -73,7 +73,7 @@
             <div class="parameter-card">
                 <h4 class="parameter-title">SpO2</h4>
                 <h6 id="spo2-level" class="parameter-level">Normal</h6>
-                <img class="parameter-img" src="/Indicators/oxygen-tank.png" alt="SpO2">
+                <img class="parameter-img" src="./Indicators/oxygen-tank.png" alt="SpO2">
                 <h1 id="spo2-value" class="parameter-Value">97.5<span> %</span></h1>
                 <div class="range-container">
                     <div class="range-limit">
@@ -89,7 +89,7 @@
             <div class="parameter-card">
                 <h4 class="parameter-title">GSR</h4>
                 <h6 id="conductance-level" class="parameter-level">Normal</h6>
-                <img class="parameter-img" src="/Indicators/hand-holding-bolt.png" alt="Conductance">
+                <img class="parameter-img" src="./Indicators/hand-holding-bolt.png" alt="Conductance">
                 <h1 id="conductance-value" class="parameter-Value">6<span> µS</span></h1>
                 <div class="range-container">
                     <div class="range-limit">
